--- a/src/languages/CN.json
+++ b/src/languages/CN.json
@@ -93,7 +93,7 @@
     "Task List": "任务清单",
     "UE": "悠译人",
     "Messages/chat": "对话",
-    "Select Language ": "语言选择",
+    "Select Language": "语言选择",
     "Enter the Language to be Translated": "请输入需要翻译的语言",
     "Add Another Language": "添加另一种语言",
     "Next": "下一步",
@@ -127,7 +127,8 @@
     "Language": "所会语言",
     "Place": "所在地",
     "Profile": "个人简介",
-    "Follow (Followed)": "收藏此人（已收藏）",
+    "Follow": "收藏此人",
+    "Followed":"已收藏",
     "Accept": "接受申请",
     "Comments": "评价任务",
     "Write Something": "写点什么",
@@ -162,7 +163,7 @@
     "Task has been accepted by xxx. Chat now!": "姚逢临已接受了您的任务，现在可以聊天啦！",
     "Task has been accepted by xxx. Chat now!": "姚逢临已接受了您的任务，现在可以聊天啦！",
     "Push Messages": "推送通知",
-    "Select Language ": "语言切换",
+    "Select Language": "语言切换",
     "Privacy Policy": "隐私政策",
     "Terms of Use": "使用条款",
     "Version": "版本",
