--- a/src/languages/KR.json
+++ b/src/languages/KR.json
@@ -93,7 +93,7 @@
     "Task List": "작업 목록",
     "UE": "UE",
     "Messages/chat": "메시지",
-    "Select Language ": "언어선택",
+    "Select Language": "언어선택",
     "Enter the Language to be Translated": "번역될 언어를 선택하세요",
     "Add Another Language": "언어추가",
     "Next": "다음",
@@ -127,7 +127,8 @@
     "Language": "언어",
     "Place": "장소",
     "Profile": "프로필",
-    "Follow (Followed)": "팔로우（팔로잉）",
+    "Follow": "팔로우",
+    "Followed": "팔로잉",
     "Accept": "수락",
     "Comments": "코멘트",
     "Write Something": "상태메세지",
@@ -162,7 +163,7 @@
     "Task has been accepted by xxx. Chat now!": "작업이 수락되었습니다. xxx대화시작 ",
     "Task has been accepted by xxx. Chat now!": "",
     "Push Messages": "알림",
-    "Select Language ": "언어선택",
+    "Select Language": "언어선택",
     "Privacy Policy": "개인정보보호",
     "Terms of Use": "이용약관",
     "Version": "버전",
