--- a/www/languages/CA.json
+++ b/www/languages/CA.json
@@ -93,7 +93,7 @@
     "Task List": "Task List",
     "UE": "UE ",
     "Messages/chat": "Messages/chat",
-    "Select Language ": "Select Language ",
+    "Select Language": "Select Language ",
     "Enter the Language to be Translated": "Enter the Language to be Translated",
     "Add Another Language": "Add Another Language",
     "Next": "Next",
@@ -127,7 +127,8 @@
     "Language": "Language",
     "Place": "Place",
     "Profile": "Profile",
-    "Follow (Followed)": "Follow (Followed)",
+    "Follow": "Follow",
+    "Followed":"Followed",
     "Accept": "Accept",
     "Comments": "Comments",
     "Write Something": "Write Something",
@@ -162,7 +163,7 @@
     "Task has been accepted by xxx. Chat now!": "Task has been accepted by xxx. Chat now!",
     "Task has been accepted by xxx. Chat now!": "Task has been accepted by xxx. Chat now!",
     "Push Messages": "Push Messages",
-    "Select Language ": "Select Language ",
+    "Select Language": "Select Language ",
     "Privacy Policy": "Privacy Policy",
     "Terms of Use": "Terms of Use",
     "Version": "Version",
