--- a/www/languages/JP.json
+++ b/www/languages/JP.json
@@ -93,7 +93,7 @@
     "Task List": "仕事リスト",
     "UE": "？",
     "Messages/chat": "チャットルーム",
-    "Select Language ": "言語選択",
+    "Select Language": "言語選択",
     "Enter the Language to be Translated": "翻訳する元の言語を選択",
     "Add Another Language": "新しい言語を追加する",
     "Next": "次へ",
@@ -127,7 +127,8 @@
     "Language": "翻訳可能言語",
     "Place": "所在地",
     "Profile": "プロフィール",
-    "Follow (Followed)": "フォローする",
+    "Follow": "フォローする",
+    "Followed":"フォローする",
     "Accept": "申請を承認する",
     "Comments": "コメント",
     "Write Something": "レビューを書く",
@@ -162,7 +163,7 @@
     "Task has been accepted by xxx. Chat now!": "xxxがあなたのオファーを受注しました。今すぐチャットを始めましょう！",
     "Task has been accepted by xxx. Chat now!": "xxxがあなたのオファーを受注しました。今すぐチャットを始めましょう！",
     "Push Messages": "新着通知",
-    "Select Language ": "言語切り替え",
+    "Select Language": "言語切り替え",
     "Privacy Policy": "プライバシーポリシー",
     "Terms of Use": "利用規約",
     "Version": "バージョン",
