--- a/www/languages/CN.json
+++ b/www/languages/CN.json
@@ -5,8 +5,8 @@
     "Register with Email": "通过邮箱注册",
     "Forgot Password": "忘记密码",
     "Or Login with Other Accounts": "或通过以下方式登录",
-    "Weibo": "微博登录",
-    "WeChat": "微信登录",
+    "Weibo": "微博",
+    "WeChat": "微信",
     "Facebook": "Facebook",
     "Enter Your Mobile No. or Email": "请输入您的手机或邮箱",
     "Enter Your Password": "请输入您的密码",
@@ -32,7 +32,7 @@
     "Rent Your Talent": "成为翻译",
     "My Followings": "我的收藏",
     "My Wallet": "我的钱包",
-    "Language": "擅长语种",
+    "Language": "语言",
     "Add Language": "添加语言",
     "Type": "翻译类型",
     "Add Type": "添加类型",
@@ -79,7 +79,7 @@
     "Withdraw Notice:Dear XXX, your application has been approved. Pls. contact your bank for transaction details if necessary.Status: Approved. Transaction Completed.": "提现提醒:xxx你好，你的账号申请的提现已经通过审核，具体到账时间以银行到账时间为准。状态：审核通过，已转账",
     "Enter Search Keywords, Language/Place/Price/Type": "请输入搜索关键字，语言/地点/价格/类型",
     "Language": "语言",
-    "Place": "地点",
+    "Place": "地区",
     "Popular Cities": "热门城市",
     "Price": "价格",
     "Price": "类型",
@@ -106,14 +106,14 @@
     "Price": "价格",
     "Day": "天",
     "Hr.": "小时",
-    "Place": "地点",
+    "Place": "地区",
     "Title": "标题",
     "Task Details": "任务详情",
     "Previous": "上一步",
     "Confirm": "确认",
     "Start Date": "开始日期",
     "End Date": "结束日期",
-    "Confirm": "确认发布",
+    "Confirm": "确认",
     "Congratulations, Task is Created!": "恭喜，您的任务已发布！",
     "Our Recommendations": "查看推荐人选",
     "Task Created": "发出任务",
@@ -124,8 +124,8 @@
     "Confirmed": "任务确认",
     "To be Rated": "待评价",
     "Closed": "已结算",
-    "Language": "所会语言",
-    "Place": "所在地",
+    "Language": "语言",
+    "Place": "地区",
     "Profile": "个人简介",
     "Follow": "收藏此人",
     "Followed":"已收藏",
@@ -139,8 +139,8 @@
     "Language Skill": "语言能力",
     "Tags": "添加标签",
     "Report or Complain": "举报或投诉",
-    "Confirm": "确认评价",
-    "Cancel": "取消评价",
+    "Confirm": "确认",
+    "Cancel": "取消",
     "Reasons of Complaint": "请选择投诉原因",
     "Evidence": "请补充证据",
     "Detail Description": "详细说明",
@@ -157,7 +157,7 @@
     "Balance Available is XX": "当前可用余额xx",
     "Payment Method": "选择支付方式",
     "Unionpay": "银联",
-    "WeChat": "微信支付",
+    "WeChat": "微信",
     "AliPay": "支付宝支付",
     "PayPal": "PayPal",
     "Task has been accepted by xxx. Chat now!": "姚逢临已接受了您的任务，现在可以聊天啦！",
