--- a/www/languages/JP.json
+++ b/www/languages/JP.json
@@ -32,7 +32,7 @@
     "Rent Your Talent": "新しい案件を受注する",
     "My Followings": "Myコレクション",
     "My Wallet": "Myウォレット",
-    "Language": "翻訳可能言語選択",
+    "Language": "言語",
     "Add Language": "新しい言語を追加",
     "Type": "翻訳形式選択",
     "Add Type": "新しい形式を追加",
@@ -79,7 +79,7 @@
     "Withdraw Notice:Dear XXX, your application has been approved. Pls. contact your bank for transaction details if necessary.Status: Approved. Transaction Completed.": "お引き出し通知:あなたのお引き出し申請は承認されました。取引に関する詳しい情報は銀行に直接お問い合わせ下さい現状：申請承認/取引中",
     "Enter Search Keywords, Language/Place/Price/Type": "キーワード検索、言語/場所/価格/形式",
     "Language": "言語",
-    "Place": "場所",
+    "Place": "地域",
     "Popular Cities": "人気都市",
     "Price": "価格",
     "Price": "形式",
@@ -106,14 +106,14 @@
     "Price": "価格",
     "Day": "一日",
     "Hr.": "一時間",
-    "Place": "場所",
+    "Place": "地域",
     "Title": "タイトル",
     "Task Details": "仕事内容詳細",
     "Previous": "前へ戻る",
     "Confirm": "内容を確認",
     "Start Date": "開始日時",
     "End Date": "終了日時",
-    "Confirm": "この内容で発注",
+    "Confirm": "内容を確認",
     "Congratulations, Task is Created!": "あなたの仕事は発注されました",
     "Our Recommendations": "おすすめ",
     "Task Created": "新しい仕事を発注",
@@ -124,8 +124,8 @@
     "Confirmed": "委託決定",
     "To be Rated": "仕事内容を評価する",
     "Closed": "すべて完了",
-    "Language": "翻訳可能言語",
-    "Place": "所在地",
+    "Language": "言語",
+    "Place": "地域",
     "Profile": "プロフィール",
     "Follow": "フォローする",
     "Followed":"フォローする",
@@ -139,7 +139,7 @@
     "Language Skill": "語学能力",
     "Tags": "タグ",
     "Report or Complain": "問題を報告する",
-    "Confirm": "評価内容を確認",
+    "Confirm": "内容を確認",
     "Cancel": "評価内容を取り消し",
     "Reasons of Complaint": "理由",
     "Evidence": "証拠",
