--- a/www/languages/KR.json
+++ b/www/languages/KR.json
@@ -32,7 +32,7 @@
     "Rent Your Talent": "통역사가 되어주세요",
     "My Followings": "내가 관심사",
     "My Wallet": "나의 계좌",
-    "Language": "구사 가능한 언어",
+    "Language": "언어",
     "Add Language": "언어 추가",
     "Type": "통역가능한 종류",
     "Add Type": "종류 추가",
@@ -79,7 +79,7 @@
     "Withdraw Notice:Dear XXX, your application has been approved. Pls. contact your bank for transaction details if necessary.Status: Approved. Transaction Completed.": "출금 통지        xxx님에게, 회원님의 요청이 승인되었습니다. 세부사항은 은행에게 직접 문의하세요.           상태: 승인. 거래완료",
     "Enter Search Keywords, Language/Place/Price/Type": "키워드 입력, 언어/장소/가격/종류",
     "Language": "언어",
-    "Place": "장소",
+    "Place": "현재 주소",
     "Popular Cities": "핫플레이스",
     "Price": "가격",
     "Price": "종류",
@@ -106,14 +106,14 @@
     "Price": "가격",
     "Day": "일",
     "Hr.": "시간",
-    "Place": "장소",
+    "Place": "현재 주소",
     "Title": "제목",
     "Task Details": "작업 정보",
     "Previous": "이전",
     "Confirm": "확인",
     "Start Date": "시작일",
     "End Date": "마감일",
-    "Confirm": "최종확인",
+    "Confirm": "확인",
     "Congratulations, Task is Created!": "축하드립니다! 작업이 생성되었습니다",
     "Our Recommendations": "저희의 통역사 추천",
     "Task Created": "작업이 생성되었습니다",
@@ -125,7 +125,7 @@
     "To be Rated": "후기 남기기",
     "Closed": "작업 완료",
     "Language": "언어",
-    "Place": "장소",
+    "Place": "현재 주소",
     "Profile": "프로필",
     "Follow": "팔로우",
     "Followed": "팔로잉",
