--- a/src/languages/JP.json
+++ b/src/languages/JP.json
@@ -87,6 +87,8 @@
     "/day": "日で計算",
     "Business": "ビジネス",
     "Travel": "旅行",
+    "商务":"ビジネス",
+    "旅行":"旅行",
     "Task Details": "具体的な仕事内容",
     "Home": "ホームページ",
     "Create Task": "新しい仕事を発注",
