--- a/src/languages/KR.json
+++ b/src/languages/KR.json
@@ -87,6 +87,8 @@
     "/day": "/일수당",
     "Business": "비즈니스",
     "Travel": "여행",
+    "商务":"비즈니스",
+    "旅行":"여행",
     "Task Details": "작업 정보",
     "Home": "홈페이지",
     "Create Task": "작업 생성",
