--- a/www/languages/CA.json
+++ b/www/languages/CA.json
@@ -87,6 +87,8 @@
     "/day": "/day",
     "Business": "Business",
     "Travel": "Travel",
+    "商务":"Business",
+    "旅行":"Travel",
     "Task Details": "Task Details",
     "Home": "Home",
     "Create Task": "Create Task",
