--- a/src/languages/KR.json
+++ b/src/languages/KR.json
@@ -147,7 +147,7 @@
     "Evidence": "항의 사유 증거",
     "Detail Description": "상세 설명",
     "Upload Photos": "사진 올리기",
-    "Followed by XXX": "xxx님이 팔로우를 했습니다",
+    "Followed by XXX": "{{value}}님이 팔로우를 했습니다",
     "Number of Tasks Completed": "작업 완료한 개수",
     "Completion Rate": "작업 효율성",
     "Apply": "신청",
@@ -156,7 +156,7 @@
     "Payment": "결제",
     "Going to Pay": "결제 대기중인 사항",
     "Pay by Balance": "잔고내에서 결제",
-    "Balance Available is XX": "사용가능한 금액 xxx",
+    "Balance Available is": "사용가능한 금액",
     "Payment Method": "결제 수단",
     "Unionpay": "은련카드",
     "WeChat": "위챗",
@@ -185,5 +185,19 @@
     "Received Comment": "내가 받은 댓글",
     "Received Invitation": "내가 받은 초대장",
     "My Followings": "내가 관심사",
-    "Change Transaction Password": "결제 비밀번호 변경"
+    "Change Transaction Password": "결제 비밀번호 변경",
+    "Back":"후퇴하다",
+    "Loading":"로드 중",
+    "More":"좀 더 이상",
+    "No More":"더 이상",
+    "Setting":"설정",
+    "Change Password":"비밀번호 변경",
+    "Enter Verification Code":"인증번호 입력",
+    "Enter Password":"비밀번호 입력",
+    "Share the App":"공유",
+    "Applicants":"지원자",
+    "Accept":"받고",
+    "Reject":"거절하다",
+    "Reset":"초기화",
+    "Enter Transaction Password":"거래 암호를 입력하십시오",
 }
