--- a/www/languages/CN.json
+++ b/www/languages/CN.json
@@ -87,8 +87,8 @@
     "/day": "按天数计算",
     "Business": "商务",
     "Travel": "旅行",
-    "商务":"商务",
-    "旅行":"旅行",
+    "商务": "商务",
+    "旅行": "旅行",
     "Task Details": "任务详情",
     "Home": "主页",
     "Create Task": "发起任务",
@@ -130,7 +130,7 @@
     "Place": "地区",
     "Profile": "个人简介",
     "Follow": "收藏此人",
-    "Followed":"已收藏",
+    "Followed": "已收藏",
     "Accept": "接受申请",
     "Comments": "评价任务",
     "Write Something": "写点什么",
@@ -156,7 +156,7 @@
     "Payment": "支付",
     "Going to Pay": "将要支付",
     "Pay by Balance": "余额支付",
-    "Balance Available is XX": "当前可用余额xx",
+    "Balance Available is": "当前可用余额",
     "Payment Method": "选择支付方式",
     "Unionpay": "银联",
     "WeChat": "微信",
@@ -185,5 +185,19 @@
     "Received Comment": "您收到的评价",
     "Received Invitation": "您收到的邀请",
     "My Followings": "我的收藏",
-    "Change Transaction Password": "修改交易密码"
+    "Change Transaction Password": "修改交易密码",
+    "Back": "返回",
+    "Loading": "正在加载中",
+    "More": "点击加载更多",
+    "No More": "没有更多数据了",
+    "Setting": "设置",
+    "Change Password": "修改登录密码",
+    "Enter Verification Code": "请输入验证码",
+    "Enter Password": "请输入登录密码",
+    "Share the App": "分享我们",
+    "Applicants": "申请人列表",
+    "Accept": "同意",
+    "Reject": "拒绝",
+    "Reset": "重置",
+    "Enter Transaction Password": "请输入交易密码"
 }
