--- a/www/languages/JP.json
+++ b/www/languages/JP.json
@@ -87,8 +87,8 @@
     "/day": "日で計算",
     "Business": "ビジネス",
     "Travel": "旅行",
-    "商务":"ビジネス",
-    "旅行":"旅行",
+    "商务": "ビジネス",
+    "旅行": "旅行",
     "Task Details": "具体的な仕事内容",
     "Home": "ホームページ",
     "Create Task": "新しい仕事を発注",
@@ -130,7 +130,7 @@
     "Place": "地域",
     "Profile": "プロフィール",
     "Follow": "フォローする",
-    "Followed":"フォローする",
+    "Followed": "フォローする",
     "Accept": "申請を承認する",
     "Comments": "コメント",
     "Write Something": "レビューを書く",
@@ -147,7 +147,7 @@
     "Evidence": "証拠",
     "Detail Description": "具体的な説明",
     "Upload Photos": "写真をアップロード",
-    "Followed by XXX": "フォロワー",
+    "Followed by XXX": "フォロワー{{value}}",
     "Number of Tasks Completed": "達成仕事件数",
     "Completion Rate": "仕事達成率",
     "Apply": "申請する",
@@ -156,7 +156,7 @@
     "Payment": "お支払い",
     "Going to Pay": "今すぐ払う",
     "Pay by Balance": "Myウォレットから払う",
-    "Balance Available is XX": "利用可能残額",
+    "Balance Available is": "利用可能残額",
     "Payment Method": "支払方法選択",
     "Unionpay": "Unionpay",
     "WeChat": "Wechat",
@@ -185,5 +185,19 @@
     "Received Comment": "新着コメント",
     "Received Invitation": "新着リクエスト",
     "My Followings": "Myコレクション",
-    "Change Transaction Password": "パスワードを変更する"
+    "Change Transaction Password": "パスワードを変更する",
+    "Back": "後退",
+    "Loading": "加載中",
+    "More": "より多くを見てください",
+    "No More": "ノーモア",
+    "Setting": "設定",
+    "Change Password": "パスワードの変更",
+    "Enter Verification Code": "認証コードを入力",
+    "Enter Password": "パスワード入力",
+    "Share the App": "シェアする",
+    "Applicants": "申込者",
+    "Accept": "を受け入れる",
+    "Reject": "断る",
+    "Reset": "リセット",
+    "Enter Transaction Password": "取引のパスワードを入力してください",
 }
