--- a/www/languages/CN.json
+++ b/www/languages/CN.json
@@ -199,5 +199,33 @@
     "Accept": "同意",
     "Reject": "拒绝",
     "Reset": "重置",
-    "Enter Transaction Password": "请输入交易密码"
+    "Enter Transaction Password": "请输入交易密码",
+    "Not Set": "未设置",
+    "Preview Detail": "查看详情",
+    "Comment Tags": "评价标签",
+    "Comments Count": "条评价",
+    "Applyed": "已经申请",
+    "Authentication Detail": "认证详情",
+    "Agree Or Not?": "是否同意？",
+    "Date": "日期",
+    "To": "至",
+    "Total Price": "总价格",
+    "Read Privacy": "阅读悠译人用户使用协议",
+    "Try Another": "当前关键字无搜索记录，换个试试！",
+    "Please Fill in": "请填写",
+    "Please Fill in Title": "请填写标题",
+    "Withdraw Notice":"提现提醒",
+    "Withdraw Money":"申请提现金额",
+    "Working Days":"工作日",
+    "Monday":"周一",
+    "Tuesday":"周二",
+    "Wednesday":"周三",
+    "Thursday":"周四",
+    "Friday":"周五",
+    "Saturday":"周六",
+    "Sunday":"周日",
+    "Introduction":"说明",
+    "Non-working Days":"非工作日",
+    "Go Complete Profile":"完善资料",
+    "Quit":"放弃"
 }
