--- a/src/languages/JP.json
+++ b/src/languages/JP.json
@@ -199,5 +199,5 @@
     "Accept": "を受け入れる",
     "Reject": "断る",
     "Reset": "リセット",
-    "Enter Transaction Password": "取引のパスワードを入力してください",
+    "Enter Transaction Password": "取引のパスワードを入力してください"
 }
