--- a/src/languages/KR.json
+++ b/src/languages/KR.json
@@ -199,5 +199,5 @@
     "Accept":"받고",
     "Reject":"거절하다",
     "Reset":"초기화",
-    "Enter Transaction Password":"거래 암호를 입력하십시오",
+    "Enter Transaction Password":"거래 암호를 입력하십시오"
 }
