--- a/src/languages/CN.json
+++ b/src/languages/CN.json
@@ -89,6 +89,7 @@
     "Travel": "旅行",
     "商务": "商务",
     "旅行": "旅行",
+    "其它": "其他",
     "Task Details": "任务详情",
     "Home": "主页",
     "Create Task": "发起任务",
@@ -188,7 +189,7 @@
     "Change Transaction Password": "修改交易密码",
     "Back": "返回",
     "Loading": "正在加载中",
-    "More": "点击加载更多",
+    "Load More": "点击加载更多",
     "No More": "没有更多数据了",
     "Setting": "设置",
     "Change Password": "修改登录密码",
@@ -200,6 +201,7 @@
     "Reject": "拒绝",
     "Reset": "重置",
     "Enter Transaction Password": "请输入交易密码",
+    "Enter Old Password": "请输入交易密码",
     "Not Set": "未设置",
     "Preview Detail": "查看详情",
     "Comment Tags": "评价标签",
@@ -212,24 +214,43 @@
     "Total Price": "总价格",
     "Read Privacy": "阅读悠译人用户使用协议",
     "Try Another": "当前关键字无搜索记录，换个试试！",
-    "Please Fill in": "请填写",
-    "Please Fill in Title": "请填写标题",
-    "Withdraw Notice":"提现提醒",
-    "Withdraw Money":"申请提现金额",
-    "Working Days":"工作日",
-    "Monday":"周一",
-    "Tuesday":"周二",
-    "Wednesday":"周三",
-    "Thursday":"周四",
-    "Friday":"周五",
-    "Saturday":"周六",
-    "Sunday":"周日",
-    "Introduction":"说明",
-    "Non-working Days":"非工作日",
-    "Go Complete Profile":"完善资料",
-    "Quit":"放弃",
-    "Bad Attitude":"态度恶劣，出现侮辱性语言",
-    "Cheating":"欺骗行为",
-    "Infringement":"侵犯行为",
-    "Other Reasons":"其他原因"
+    "Please enter": "请填写",
+    "Please enter Title": "请填写标题",
+    "Please choose": "请选择",
+    "Withdraw Notice": "提现提醒",
+    "Withdraw Money": "申请提现金额",
+    "Working Days": "工作日",
+    "Monday": "周一",
+    "Tuesday": "周二",
+    "Wednesday": "周三",
+    "Thursday": "周四",
+    "Friday": "周五",
+    "Saturday": "周六",
+    "Sunday": "周日",
+    "Introduction": "说明",
+    "Non-working Days": "非工作日",
+    "Go Complete Profile": "完善资料",
+    "Quit": "放弃",
+    "Bad Attitude": "态度恶劣，出现侮辱性语言",
+    "Cheating": "欺骗行为",
+    "Infringement": "侵犯行为",
+    "Other Reasons": "其他原因",
+    "Unit": "CNY",
+    "Cost Fee": "收费标准",
+    "remove": "删除",
+    "Add": "添加",
+    "No Authenication Information": "暂无认证信息",
+    "Certificate name": "证书名称",
+    "Example": "示例",
+    "In the audit": "审核中",
+    "Audit did not pass, re certification": "审核未通过,重新认证",
+    "Authentication Pass": "认证通过",
+    "Immediately certification": "马上认证",
+    "No authentication": "暂无认证",
+    "Due Bank": "收款银行",
+    "Due Bank": "收款卡号",
+    "Account holder": "开户人",
+    "Status": "状态",
+    "Audit pass, transfer": "审核通过，已转账",
+    "Withdrawal time": "提现时间"
 }
