--- a/src/languages/JP.json
+++ b/src/languages/JP.json
@@ -73,7 +73,7 @@
     "Enter Complete Bank Name Correctly": "銀行名を略さずに記入",
     "Bank Account No.": "口座名",
     "Cardholder Name": "口座名義",
-    "Once your application is approved, money will be transferred to you account after 2-3 working days. Any inquiries, Pls. Contact xxxx": "お引き出し申請後２,３仕事日で、現金は自動的に銀行口座に振り込まれます。もし質問等ございましたらxxxxまでご連絡下さい",
+    "Once your application is approved, money will be transferred to you account after 2-3 working days. Any inquiries, Pls. Contact xxxx": "お引き出し申請後２,３仕事日で、現金は自動的に銀行口座に振り込まれます。もし質問等ございましたら{{value}}までご連絡下さい",
     "Submit": "申請する",
     "Withdraw Record": "お引き出し履歴",
     "Withdraw Notice:Dear XXX, your application has been approved. Pls. contact your bank for transaction details if necessary.Status: Approved. Transaction Completed.": "お引き出し通知:あなたのお引き出し申請は承認されました。取引に関する詳しい情報は銀行に直接お問い合わせ下さい現状：申請承認/取引中",
@@ -89,7 +89,7 @@
     "Travel": "旅行",
     "商务": "ビジネス",
     "旅行": "旅行",
-    "其它":"その他",
+    "其它": "その他",
     "Task Details": "具体的な仕事内容",
     "Home": "ホームページ",
     "Create Task": "新しい仕事を発注",
@@ -201,5 +201,57 @@
     "Reject": "断る",
     "Reset": "リセット",
     "Enter Transaction Password": "取引のパスワードを入力してください",
-    "Unit":"JPY"
+    "Unit": "JPY",
+    "Not Set": "未設定",
+    "Preview Detail": "詳細を見る",
+    "Comment Tags": "評価ラベル",
+    "Applyed": "すでに申請",
+    "Authentication Detail": "認証の詳細",
+    "Agree Or Not?": "誘いを受け入れるかどうか？",
+    "Date": "日付",
+    "To": "から",
+    "Total Price": "総価格",
+    "Read Privacy": "ユーザーの合意を読む",
+    "Try Another": "記録はないが、別の1つをためしてください！",
+    "Please enter": "を記入してください",
+    "Please enter Title": "タイトルを記入してください",
+    "Please choose": "を選択してください",
+    "Withdraw Notice": "お引き出し通知",
+    "Withdraw Money": "お引き出し金額",
+    "Working Days": "作業日",
+    "Monday": "月曜日",
+    "Tuesday": "火曜日",
+    "Wednesday": "水曜日",
+    "Thursday": "木曜日",
+    "Friday": "金曜日",
+    "Saturday": "土曜日",
+    "Sunday": "日曜日",
+    "Introduction": "説明",
+    "Non-working Days": "非作業日",
+    "Go Complete Profile": "個人情報を改善",
+    "Modify Profile": "資料変更",
+    "Quit": "放棄する",
+    "Bad Attitude": "態度の悪い",
+    "Cheating": "詐欺行為",
+    "Infringement": "侵犯行為",
+    "Other Reasons": "その他の原因",
+    "Cost Fee": "サービス料",
+    "Remove": "削除",
+    "Add": "添加",
+    "No Authenication Information": "無認証情報",
+    "Certificate Name": "証明書の名称",
+    "Example": "例",
+    "In the audit": "審査待ち",
+    "Audit did not pass, re certification": "審査が通っていませんが、再認証",
+    "Authentication Pass": "審査に合格",
+    "Immediately certification": "すぐに認証",
+    "No authentication": "無認証",
+    "Due Bank": "銀行名",
+    "Due Bank": "口座名",
+    "Account holder": "口座名義",
+    "Status": "現状",
+    "Audit pass, transfer": "申請承認/取引中",
+    "Withdrawal Time": "お引き出し時間",
+    "Edit": "編集",
+    "Close": "閉鎖"
 }
