--- a/www/languages/CA.json
+++ b/www/languages/CA.json
@@ -73,7 +73,7 @@
     "Enter Complete Bank Name Correctly": "Enter Complete Bank Name Correctly",
     "Bank Account No.": "Bank Account No.",
     "Cardholder Name": "Cardholder Name",
-    "Once your application is approved, money will be transferred to you account after 2-3 working days. Any inquiries, Pls. Contact xxxx": "Once your application is approved, money will be transferred to you account after 2-3 working days. Any inquiries, Pls. Contact xxxx",
+    "Once your application is approved, money will be transferred to you account after 2-3 working days. Any inquiries, Pls. Contact xxxx": "Once your application is approved, money will be transferred to you account after 2-3 working days. Any inquiries, Pls. Contact {{value}}",
     "Submit": "Submit",
     "Withdraw Record": "Withdraw Record",
     "Withdraw Notice:Dear XXX, your application has been approved. Pls. contact your bank for transaction details if necessary.Status: Approved. Transaction Completed.": "Withdraw Notice:Dear XXX, your application has been approved. Pls. contact your bank for transaction details if necessary.Status: Approved. Transaction Completed.",
@@ -131,7 +131,7 @@
     "Place": "Place",
     "Profile": "Profile",
     "Follow": "Follow",
-    "Followed":"Followed",
+    "Followed": "Followed",
     "Accept": "Accept",
     "Comments": "Comments",
     "Write Something": "Write Something",
@@ -187,5 +187,66 @@
     "Received Invitation": "Received Invitation",
     "My Followings": "My Followings",
     "Change Transaction Password": "Change Transaction Password",
-    "Unit":"USD"
+    "Unit": "USD",
+    "Not Set": "To be Set",
+    "Preview Detail": "See Details",
+    "Comment Tags": "",
+    "Applyed": "Applied",
+    "Authentication Detail": "Authentication Details",
+    "Agree Or Not?": "Accept Inviatation?",
+    "Date": "Date",
+    "To": "To",
+    "Total Price": "Total Price",
+    "Read Privacy": "Read the User Agreement",
+    "Try Another": "No Record, Try Another One！",
+    "Please enter": "Please Enter",
+    "Please enter Title": "Please Enter a Title",
+    "Please choose": "Please Select",
+    "Withdraw Notice": "Withdrawal Notice",
+    "Withdraw Money": "Amount",
+    "Working Days": "Working Days",
+    "Monday": "Monday",
+    "Tuesday": "Tuesday",
+    "Wednesday": "Wednesday",
+    "Thursday": "Thursday",
+    "Friday": "Friday",
+    "Saturday": "Saturday",
+    "Sunday": "Sunday",
+    "Introduction": "Introduction",
+    "Non-working Days": "Non-working Days",
+    "Go Complete Profile": "Complete Profile",
+    "Modify Profile": "Modify Profile",
+    "Quit": "Quit",
+    "Bad Attitude": "Bad Attitude and Insult",
+    "Cheating": "Cheating",
+    "Infringement": "Infringement",
+    "Other Reasons": "Other Reasons",
+    "Cost Fee": "Service Charge",
+    "Remove": "Remove",
+    "Add": "Add",
+    "No Authenication Information": "No Authenication Information",
+    "Certificate Name": "Certification Name",
+    "Example": "Example",
+    "In the audit": "Approving",
+    "Audit did not pass, re certification": "Failed, please Try Again",
+    "Authentication Pass": "Approved",
+    "Immediately certification": "Go Authenticate",
+    "No authentication": "No Authentication",
+    "Due Bank": "Bank Name",
+    "Due Bank": "Enter Complete Bank Name Correctly",
+    "Account holder": "Cardholder Name",
+    "Status": "Status",
+    "Audit pass, transfer": "Approved. Transaction Completed",
+    "Withdrawal Time": "Withdrawal Time",
+    "Edit": "Edit",
+    "Close": "Close",
+    "Important Notice": "Important Notice",
+    "UE Lives provides this platform to facilitate transaction, but we are not a local service provider and do not provide local services. Users should select services wisely. UE Lives is not responsible for any lost. If there is any charge for non-voluntary activities or shopping, please report to us.": "UE Lives provides this platform to facilitate transaction, but we are not a local service provider and do not provide local services. Users should select services wisely. UE Lives is not responsible for any lost. If there is any charge for non-voluntary activities or shopping, please report to us.",
+    "Please describe the task details, schedule, and requirements. If there is any request for other service (e.g. airport pick-up or vehicle), please specify.Note: any fee caused by other services and any additional fees(e.g.tickets for resorts, or intra - city transportation, etc.) are not included in the interpretering fee,and should be paid by the task owner.Please negotiate details with the interpreter after the task is confirmed.": "Please describe the task details, schedule, and requirements. If there is any request for other service (e.g. airport pick-up or vehicle), please specify.Note: any fee caused by other services and any additional fees(e.g.tickets for resorts, or intra - city transportation, etc.) are not included in the interpretering fee,and should be paid by the task owner.Please negotiate details with the interpreter after the task is confirmed.",
+    "Please introduce yourself briefly, e.g. your skills and speciality, to let others know more about you.": "请介绍自己，如专长、特点等，让别人更快认识你。",
+    "Kindly describe": "Kindly describe",
+    "working hours, and whether there is charge for extra hour(s);": "working hours, and whether there is charge for extra hour(s);",
+    "working areas (which city/cities);": "接受哪些地区的任务；",
+    "other services available, such as vehicle, airport pick-up/deliver, and etc., and the charges accordingly;": "other services available, such as vehicle, airport pick-up/deliver, and etc., and the charges accordingly;",
+    "other remarks, please sepcify.": "other remarks, please sepcify."
 }
