--- a/www/languages/CN.json
+++ b/www/languages/CN.json
@@ -73,7 +73,7 @@
     "Enter Complete Bank Name Correctly": "请输入开户银行全称",
     "Bank Account No.": "银行卡号",
     "Cardholder Name": "开户人姓名",
-    "Once your application is approved, money will be transferred to you account after 2-3 working days. Any inquiries, Pls. Contact xxxx": "申请提现平台审核成功后，提现金额将会在2-3个工作日内转入您的账户，如有疑问，请致电",
+    "Once your application is approved, money will be transferred to you account after 2-3 working days. Any inquiries, Pls. Contact xxxx": "申请提现平台审核成功后，提现金额将会在2-3个工作日内转入您的账户，如有疑问，请致电{{value}}",
     "Submit": "申请提现",
     "Withdraw Record": "提现记录",
     "Withdraw Notice:Dear XXX, your application has been approved. Pls. contact your bank for transaction details if necessary.Status: Approved. Transaction Completed.": "提现提醒:xxx你好，你的账号申请的提现已经通过审核，具体到账时间以银行到账时间为准。状态：审核通过，已转账",
@@ -202,13 +202,13 @@
     "Reset": "重置",
     "Enter Transaction Password": "请输入交易密码",
     "Enter Old Password": "请输入交易密码",
+    "Unit": "CNY",
     "Not Set": "未设置",
     "Preview Detail": "查看详情",
     "Comment Tags": "评价标签",
-    "Comments Count": "条评价",
     "Applyed": "已经申请",
     "Authentication Detail": "认证详情",
-    "Agree Or Not?": "是否同意？",
+    "Agree Or Not?": "是否接受邀请?",
     "Date": "日期",
     "To": "至",
     "Total Price": "总价格",
@@ -218,7 +218,7 @@
     "Please enter Title": "请填写标题",
     "Please choose": "请选择",
     "Withdraw Notice": "提现提醒",
-    "Withdraw Money": "申请提现金额",
+    "Withdraw Money": "提现金额",
     "Working Days": "工作日",
     "Monday": "周一",
     "Tuesday": "周二",
@@ -230,30 +230,39 @@
     "Introduction": "说明",
     "Non-working Days": "非工作日",
     "Go Complete Profile": "完善资料",
-    "Modify Profile":"修改资料",
+    "Modify Profile": "修改资料",
     "Quit": "放弃",
     "Bad Attitude": "态度恶劣，出现侮辱性语言",
     "Cheating": "欺骗行为",
     "Infringement": "侵犯行为",
     "Other Reasons": "其他原因",
-    "Unit": "CNY",
     "Cost Fee": "收费标准",
-    "remove": "删除",
+    "Remove": "删除",
     "Add": "添加",
     "No Authenication Information": "暂无认证信息",
-    "Certificate name": "证书名称",
+    "Certificate Name": "证书名称",
     "Example": "示例",
     "In the audit": "审核中",
     "Audit did not pass, re certification": "审核未通过,重新认证",
     "Authentication Pass": "认证通过",
     "Immediately certification": "马上认证",
     "No authentication": "暂无认证",
-    "Due Bank": "收款银行",
-    "Due Bank": "收款卡号",
-    "Account holder": "开户人",
+    "Due Bank": "开户银行",
+    "Due Bank": "银行卡号",
+    "Account holder": "开户人姓名",
     "Status": "状态",
     "Audit pass, transfer": "审核通过，已转账",
-    "Withdrawal time": "提现时间",
-    "Edit":"编辑",
-    "Close":"关闭"
+    "Withdrawal Time": "提现时间",
+    "Edit": "编辑",
+    "Close": "关闭",
+    "Important Notice": "敬请留意",
+    "UE Lives provides this platform to facilitate transaction, but we are not a local service provider and do not provide local services. Users should select services wisely. UE Lives is not responsible for any lost. If there is any charge for non-voluntary activities or shopping, please report to us.": "悠译仅提供平台，不是服务提供商，悠译并不参与当地服务供应，请用户自行甄别和选择，悠译概不负责。如行程中有未注明的非自愿活动或购物，请举报。",
+    "Please describe the task details, schedule, and requirements. If there is any request for other service (e.g. airport pick-up or vehicle), please specify.Note: any fee caused by other services and any additional fees(e.g.tickets for resorts, or intra - city transportation, etc.) are not included in the interpretering fee,and should be paid by the task owner.Please negotiate details with the interpreter after the task is confirmed.": "请详细描述任务的内容， 行程和要求； 是否需其他服务（ 例如， 接送机或包车等）。注意： 其他服务所产生的开销和其他额外花费（ 例如， 景点门票或跨城市交通等） 不包含在翻译任务价钱中， 并应由任务发布人承担， 请待任务确认后自行与翻译者商讨。",
+    "Please introduce yourself briefly, e.g. your skills and speciality, to let others know more about you.": "请介绍自己，如专长、特点等，让别人更快认识你。",
+    "Kindly describe": "也请描述下",
+    "working hours, and whether there is charge for extra hour(s);": "每日服务时长，是否有超时收费；",
+    "working areas (which city/cities);": "接受哪些地区的任务；",
+    "other services available, such as vehicle, airport pick-up/deliver, and etc., and the charges accordingly;": "是否提供如包车、接机等其他服务，以及其他服务的额外收费；",
+    "other remarks, please sepcify.": "其他特别提示，也请注明。"
+
 }
