--- a/www/languages/KR.json
+++ b/www/languages/KR.json
@@ -73,7 +73,7 @@
     "Enter Complete Bank Name Correctly": "은행이름 (공식명칭)",
     "Bank Account No.": "은행계좌번호",
     "Cardholder Name": "카드소지자 이름",
-    "Once your application is approved, money will be transferred to you account after 2-3 working days. Any inquiries, Pls. Contact xxxx": "출금요청이 승인되면 2-3 영업일 후 송금됩니다. 문의는 xxxx로 해주세요",
+    "Once your application is approved, money will be transferred to you account after 2-3 working days. Any inquiries, Pls. Contact xxxx": "출금요청이 승인되면 2-3 영업일 후 송금됩니다. 문의는 {{value}}로 해주세요",
     "Submit": "제출",
     "Withdraw Record": "출금기록",
     "Withdraw Notice:Dear XXX, your application has been approved. Pls. contact your bank for transaction details if necessary.Status: Approved. Transaction Completed.": "출금 통지        xxx님에게, 회원님의 요청이 승인되었습니다. 세부사항은 은행에게 직접 문의하세요.           상태: 승인. 거래완료",
@@ -87,9 +87,9 @@
     "/day": "/일수당",
     "Business": "비즈니스",
     "Travel": "여행",
-    "商务":"비즈니스",
-    "旅行":"여행",
-    "其它":"기타등등",
+    "商务": "비즈니스",
+    "旅行": "여행",
+    "其它": "기타등등",
     "Task Details": "작업 정보",
     "Home": "홈페이지",
     "Create Task": "작업 생성",
@@ -187,19 +187,80 @@
     "Received Invitation": "내가 받은 초대장",
     "My Followings": "내가 관심사",
     "Change Transaction Password": "결제 비밀번호 변경",
-    "Back":"후퇴하다",
-    "Loading":"로드 중",
-    "Load More":"좀 더 이상",
-    "No More":"더 이상",
-    "Setting":"설정",
-    "Change Password":"비밀번호 변경",
-    "Enter Verification Code":"인증번호 입력",
-    "Enter Password":"비밀번호 입력",
-    "Share the App":"공유",
-    "Applicants":"지원자",
-    "Accept":"받고",
-    "Reject":"거절하다",
-    "Reset":"초기화",
-    "Enter Transaction Password":"거래 암호를 입력하십시오",
-    "Unit":"KPW"
+    "Back": "후퇴하다",
+    "Loading": "로드 중",
+    "Load More": "좀 더 이상",
+    "No More": "더 이상",
+    "Setting": "설정",
+    "Change Password": "비밀번호 변경",
+    "Enter Verification Code": "인증번호 입력",
+    "Enter Password": "비밀번호 입력",
+    "Share the App": "공유",
+    "Applicants": "지원자",
+    "Accept": "받고",
+    "Reject": "거절하다",
+    "Reset": "초기화",
+    "Enter Transaction Password": "거래 암호를 입력하십시오",
+    "Unit": "KPW",
+    "Not Set": "설정하지 않음",
+    "Preview Detail": "세부 참조",
+    "Comment Tags": "평가 탭",
+    "Applyed": "이미 제출",
+    "Authentication Detail": "인증 정보",
+    "Agree Or Not?": "초대를 수락 할지 여부 ?",
+    "Date": "날짜",
+    "To": "에",
+    "Total Price": "총 가격",
+    "Read Privacy": "읽기 사용자 협의",
+    "Try Another": "아니 기록",
+    "Please enter": "작성해 주세요",
+    "Please enter Title": "작성해 주세요 제목",
+    "Please choose": "선택하십시오",
+    "Withdraw Notice": "출금 통지 ",
+    "Withdraw Money": "금액",
+    "Working Days": "작업일",
+    "Monday": "월요일",
+    "Tuesday": "화요일",
+    "Wednesday": "수요일",
+    "Thursday": "목요일",
+    "Friday": "금요일",
+    "Saturday": "토요일",
+    "Sunday": "일요일",
+    "Introduction": "설명",
+    "Non-working Days": "비 작업일",
+    "Go Complete Profile": "완성하다 자료",
+    "Modify Profile": "수정 데자료",
+    "Quit": "포기",
+    "Bad Attitude": "태도가 아주 나쁘다",
+    "Cheating": "피들",
+    "Infringement": "위반",
+    "Other Reasons": "다른 원인",
+    "Cost Fee": "수수료",
+    "Remove": "삭제",
+    "Add": "추가",
+    "No Authenication Information": "어떤 인증 도 없다",
+    "Certificate Name": "인증서 이름",
+    "Example": "예",
+    "In the audit": "지금 검증",
+    "Audit did not pass, re certification": "인증에 실패， 다시 인증",
+    "Authentication Pass": "인증 이미 통해",
+    "Immediately certification": "당장 인증",
+    "No authentication": "무 인증",
+    "Due Bank": "은행이름",
+    "Due Bank": "은행계좌번호",
+    "Account holder": "카드소지자 이름",
+    "Status": "상태",
+    "Audit pass, transfer": "승인. 거래완료",
+    "Withdrawal Time": "출금시간",
+    "Edit": "수정",
+    "Close": "닫기",
+    "Important Notice": "주의사항",
+    "UE Lives provides this platform to facilitate transaction, but we are not a local service provider and do not provide local services. Users should select services wisely. UE Lives is not responsible for any lost. If there is any charge for non-voluntary activities or shopping, please report to us.": "UE Lives는 작업 거래하는 플랫폼입니다. 하지만, 서비스 제공사가 않입니다. UE Lives는 서비스을 제공하지 않습니다.사용자 잘 선택해 주시기 바랍니다. UE Lives는 분실에 대한 책임을 지지 않습니다. 작업 스케줄안에 없는 비 자발적인 활동이나 쇼핑등 있을 경우, 저희에게 알려주시기 바랍니다.",
+    "Please describe the task details, schedule, and requirements. If there is any request for other service (e.g. airport pick-up or vehicle), please specify.Note: any fee caused by other services and any additional fees(e.g.tickets for resorts, or intra - city transportation, etc.) are not included in the interpretering fee,and should be paid by the task owner.Please negotiate details with the interpreter after the task is confirmed.": "작업 내용, 일정 및 요구 사항을 자세히 설명해주세요. (예. 공항픽업, 렌터카 등 다른 서비스 요구있을 경우).주의: 번역요금외에 다른 서비스에 나온 별도 요금은 (예. 관광지 입장료, 교통비등) 작업요금안에 포함되지 않아, 작업발행자가 지급하여야합니다. 작업이 컨펌받기전에 인터프리터와 세부 사항을 협상을하여야 합니다.",
+    "Please introduce yourself briefly, e.g. your skills and speciality, to let others know more about you.": "다른사람과 더 빨리 친해지기 위해, 자기을 소개하시기 바랍니다. (예. 재능, 특징 등）",
+    "Kindly describe": "설명해주시기 바랍니다",
+    "working hours, and whether there is charge for extra hour(s);": "메일 서비스 기간. 추가 시간당 요금;",
+    "working areas (which city/cities);": "서비스 구역 (도시/지역);",
+    "other services available, such as vehicle, airport pick-up/deliver, and etc., and the charges accordingly;": "기타 제공 서비스 (예. 렌터카, 공항픽업 등 서비스), 및 별도 서비스 요금;",
+    "other remarks, please sepcify.": "기타 특별주의사항을 표시하시기 바랍니다."
 }
