--- a/src/languages/CA.json
+++ b/src/languages/CA.json
@@ -190,7 +190,7 @@
     "Unit": "USD",
     "Not Set": "To be Set",
     "Preview Detail": "See Details",
-    "Comment Tags": "",
+    "Comment Tags": "Comment Tags",
     "Applyed": "Applied",
     "Authentication Detail": "Authentication Details",
     "Agree Or Not?": "Accept Inviatation?",
