--- a/src/languages/CN.json
+++ b/src/languages/CN.json
@@ -263,6 +263,11 @@
     "working hours, and whether there is charge for extra hour(s);": "每日服务时长，是否有超时收费；",
     "working areas (which city/cities);": "接受哪些地区的任务；",
     "other services available, such as vehicle, airport pick-up/deliver, and etc., and the charges accordingly;": "是否提供如包车、接机等其他服务，以及其他服务的额外收费；",
-    "other remarks, please sepcify.": "其他特别提示，也请注明。"
-
+    "other remarks, please sepcify.": "其他特别提示，也请注明。",
+    "Authentication":"审核认证",
+    "Settlement":"结算问题",
+    "Events":"市场活动",
+    "Any questions, suggestions, or problems can be input here, we will get back to you soon!":"有任何疑问及建议请提出，我们将会尽快处理!",
+    "Please contact us for any advertisement enquiry or quotation.":"广告业务查询及报价，请与我们联系。",
+    "Please briefly describe your business and advertisement needs here. We will get back to you soon.":"请简单描述您的业务和广告需要，我们的工作人员会尽快与您联系。"
 }
